--- a/cloud_eureka_client/service_lucy/src/main/resources/application.properties
+++ b/cloud_eureka_client/service_lucy/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #eureka服务提供者
-spring.application.name=service-hi
+spring.application.name=service-lucy
 #server.port=8762
 server.port=8763
-eureka.instance.hostname=peer1
+eureka.instance.hostname=localhost
 #设置eureka服务器所在的地址，查询服务和注册服务都需要依赖这个地址
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+spring.zipkin.base-url=http://localhost:9411
