--- a/cloud_service-zuul/src/main/resources/application.properties
+++ b/cloud_service-zuul/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8770
 eureka.instance.hostname=localhost
 #设置eureka服务器所在的地址，查询服务和注册服务都需要依赖这个地址
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
-
+spring.zipkin.base-url=http://localhost:9411
 #配置在配置文件中的路由转发信息
 zuul.routes.api-a.path=/api-a/**
 zuul.routes.api-a.serviceId=service-ribbon
