--- a/cloud_service_feign/src/main/resources/application.properties
+++ b/cloud_service_feign/src/main/resources/application.properties
@@ -6,3 +6,4 @@ eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
 #Feign是自带断路器的，在D版本的Spring Cloud中，它没有默认打开
 feign.hystrix.enabled=true
+spring.zipkin.base-url=http://localhost:9411
