--- a/cloud_sleuth/server_zipkin/pom.xml
+++ b/cloud_sleuth/server_zipkin/pom.xml
@@ -26,6 +26,11 @@
             <scope>test</scope>
         </dependency>
 
+<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>io.zipkin.java</groupId>
             <artifactId>zipkin-server</artifactId>
