--- a/cloud_sleuth/server_zipkin/src/main/resources/application.properties
+++ b/cloud_sleuth/server_zipkin/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=server_zipkin
 server.port=9411
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
