--- a/cloud_admin/pom.xml
+++ b/cloud_admin/pom.xml
@@ -183,6 +183,11 @@
 			<artifactId>mapper-spring-boot-starter</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+
+        <dependency>
+             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency><dependency><groupId>org.apache.velocity</groupId><artifactId>velocity</artifactId><version>1.7</version><scope>test</scope></dependency><dependency><groupId>org.freemarker</groupId><artifactId>freemarker</artifactId><version>2.3.26-incubating</version><scope>test</scope></dependency>
     </dependencies>
 
 	<build>
