--- a/cloud_admin/src/main/resources/application.properties
+++ b/cloud_admin/src/main/resources/application.properties
@@ -71,3 +71,14 @@ spring.redis.pool.max-active= 8
 spring.redis.pool.max-wait= -1
 # 连接超时时间（毫秒）
 spring.redis.timeout= 0
+
+
+spring.mail.host=smtp.qq.com
+spring.mail.username=710368779@qq.com
+spring.mail.password=jlvzzbuwkcjxbfjh
+spring.mail.port=465
+spring.mail.protocol=smtp
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=25000
