--- a/cloud_config/config_client/src/main/resources/bootstrap.properties
+++ b/cloud_config/config_client/src/main/resources/bootstrap.properties
@@ -5,8 +5,6 @@ spring.cloud.config.label=master
 #dev开发环境配置文件 test测试环境 pro正式环境
 spring.cloud.config.profile=dev
 
-#指明配置服务中心的网址。不再直接从配置服务中心读取文件
-#spring.cloud.config.uri= http://localhost:8888/
 
 #从配置中心读取文件。
 spring.cloud.config.discovery.enabled=true
@@ -14,7 +12,11 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+## 刷新时，关闭安全验证
+management.security.enabled=false
+## 开启消息跟踪
+spring.cloud.bus.trace.enabled=true
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
- spring.rabbitmq.username=guest
- spring.rabbitmq.password=guest
+spring.rabbitmq.username=user
+spring.rabbitmq.password=user
