--- a/cloud_admin/src/main/resources/application.properties
+++ b/cloud_admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-debug=true
+#debug=true
 logging.level.org.springframework.web=DEBUG
 logging.level.com.springboot.study.mapper = DEBUG
 #thymeleaf start
